--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-GOOGLE_API_KEY=AIzaSyDar3GLwRzX8XA-aXbHV65ClfJJV3099t0
+GOOGLE_API_KEY=APIKEY
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_ADDRESS=jesusisnotking6996@gmail.com
-EMAIL_PASSWORD=uayvpvaeekrlsois
-TEST_ALERT_EMAIL=gopeshkachhadiya73@gmail.com
+EMAIL_ADDRESS=SENDER_EMAIL
+EMAIL_PASSWORD=PASSWORD
+TEST_ALERT_EMAIL=RECIVER EMAIL
